--- a/index.html
+++ b/index.html
@@ -3,34 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/styles.css"> <!-- Assuming this is the correct path to your CSS file -->
     <title>Simple Movement Game</title>
-    <style>
-        canvas {
-            border: 1px solid black;
-        }
-        #gameCanvasContainer {
-            position: relative;
-        }
-        #gameMessage {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: rgba(255, 255, 255, 0.7);
-            padding: 20px;
-            border-radius: 10px;
-            display: none;
-        }
-    </style>
 </head>
 <body>
     <div id="gameCanvasContainer">
-        <canvas id="gameCanvas" width="800" height="600"></canvas>
+        <canvas id="gameCanvas"></canvas>
         <div id="gameMessage">
             <p>Press OK or hit the space bar to start the game.</p>
         </div>
     </div>
-    <script type="module" src="scripts/main.js"></script>
-    <script type="module" src="scripts/coins.js"></script>
+
+    <!-- Include scripts using defer to ensure they execute after the DOM has loaded -->
+    <script defer src="scripts/main.js" type="module"></script>
 </body>
 </html>
