--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css"> <!-- Assuming this is the correct path to your CSS file -->
+    <link rel="stylesheet" href="css/styles.css"> <!-- Assuming this is the correct path to your CSS file -->
     <title>Simple Movement Game</title>
 </head>
 <body>
