added notes on landing page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <div id="gameCanvasContainer">
         <canvas id="gameCanvas"></canvas>
         <div id="gameMessage">
-            <p>Press OK or hit the space bar to start the game.</p>
+            <p>Hit the space bar to start the game.</p>
+            <p>Use the arrow keys to move the player.</p>
+            <p>Collect the coins to increase your score.</p>
+            <p>ENJOY!</p>
         </div>
     </div>
 
