fixed velocity speed issue with player speed dropping. added console log for speed for debugging

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <canvas id="gameCanvas"></canvas>
         <div id="gameMessage">
             <p>Hit the space bar to start the game.</p>
-            <p>Use the arrow keys to move the player.</p>
-            <p>Collect the coins to increase your score.</p>
+            <p>Use WASD to move the player.</p>
+            <p></p>
             <p>ENJOY!</p>
         </div>
     </div>
